adding the summary table

--- a/reports/muse_report/acl2014.bib
+++ b/reports/muse_report/acl2014.bib
@@ -11,3 +11,12 @@
   journal={arXiv preprint arXiv:1711.00043},
   year={2017}
 }
+
+@misc{muserepo,
+  author = {Facebook, Inc.},
+  title = {MUSE},
+  year = {2017},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/facebookresearch/MUSE}}
+}
