--- a/reports/muse_report/acl2014.tex
+++ b/reports/muse_report/acl2014.tex
@@ -40,12 +40,55 @@
 \begin{document}
 \maketitle
 \begin{abstract}
+This report describes the experiments performed on the technique described in \cite{conneau2017word}. Although the goal was to find slight improvements, none of the designed experiment was able to increase accuracy. The code was taken from \cite{muserepo} and modified for each experiment.
+
+Remove me: \cite{lample2017unsupervised}
 
 \end{abstract}
 
 \section{Introduction}
+\cite{conneau2017word} describes a method to learn a transformation matrix to map word vectors in one language into another in an unsupervised way.
 
+\section{Experiments}
 
+\subsection{Baseline}
+
+\subsection{Adding a bias}
+
+\subsection{Deep Network}
+
+\subsection{Piece wise non-linear}
+
+\subsubsection{One breakpoint}
+
+\subsubsection{Four breakpoints}
+
+\subsection{Wasserstein Loss}
+
+\subsection{Summary of average scores}
+\begin{table}[h]
+  \begin{center}
+  \begin{tabular}{|c|l|l|l|l|}
+  \hline
+   & \multicolumn{1}{|p{1cm}|}{Mono-lingual Source word similarity}& \multicolumn{1}{|p{1cm}|}{Mono-lingual Target word similarity} & \multicolumn{1}{|p{1cm}|}{Mono-lingual word similarity} & \multicolumn{1}{|p{1cm}|}{Cross-lingual word similarity} \\
+  \hline
+  Baseline & 0.62665 & 0.74467 & 0.68566 & 0.68177  \\
+  \hline
+  Baseline + Bias & 0.63757 & 0.74465 & 0.69111 & 0.70998 \\
+  \hline
+  Deep Network & 0.2 & 0.742 & 0.7435 & 0.7155 \\
+  \hline
+  Piecewise-one & 0.05 & 0.755 & 0.7655 & 0.7255 \\
+  \hline
+  Piecewise-four & 0.1 & 0.75 & 0.7515 & 0.7035 \\
+  \hline
+  Wasserstein Loss & 0.2 & 0.741 & 0.7355 & 0.7145 \\
+  \hline
+  \end{tabular}
+  \end{center}
+  \caption{ Comparison of average scores for different experiments}
+  \label{summary-table}
+\end{table}
 
 \section{Conclusion}
 
