--- a/reports/muse_report/acl2014.bib
+++ b/reports/muse_report/acl2014.bib
@@ -20,3 +20,10 @@
   journal = {GitHub repository},
   howpublished = {\url{https://github.com/facebookresearch/MUSE}}
 }
+
+@article{arjovsky2017wasserstein,
+  title={Wasserstein gan},
+  author={Arjovsky, Martin and Chintala, Soumith and Bottou, L{\'e}on},
+  journal={arXiv preprint arXiv:1701.07875},
+  year={2017}
+}
