--- a/reports/muse_report/acl2014.tex
+++ b/reports/muse_report/acl2014.tex
@@ -40,19 +40,21 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-This report describes the experiments performed on the technique described in \cite{conneau2017word}. Although the goal was to find slight improvements, none of the designed experiment was able to increase accuracy. The code was taken from \cite{muserepo} and modified for each experiment.
+This report describes the experiments performed on the technique described in \cite{conneau2017word}. Although the goal was to find improvements, none of the designed experiment was able to increase accuracy by a substantial margin. The code was taken from \cite{muserepo} and modified for each experiment.
 
 Remove me: \cite{lample2017unsupervised}
 
 \end{abstract}
 
 \section{Introduction}
-\cite{conneau2017word} describes a method to learn a mapping function to align word vectors in one language with another in an unsupervised way. It is assumed that the word vectors are already provided. The training process is adversarial with the Mapping function as the generator and an additional fully connected feedforward network as the Discriminator. In the paper, the mapping function is a matrix. Therefore after the adversarial training, the paper suggests orthogonalization of the matrix followed by (iterative) Procrustes refinement. Since these add-on steps are only possible with a matrix, I removed them from all of the experiments to enable a justified comparison.
+\cite{conneau2017word} describes a method to learn a mapping function to align word vectors in one language with another in an unsupervised way. It is assumed that the word vectors are already provided. The training process is adversarial with the Mapping function as the generator and an additional fully connected feedforward network as the Discriminator. The paper uses a linear matrix transformation as the mapping function and therefore, the main hypothesis being tested in this report is that whether non-linear mapping functions can perform better or not.
 
 \section{Experiments}
 This section describes the various configurations tried out with their respective motivations. There are no experiments involving a change in the Discriminator because there can't be any improvements made in it. It takes a vector as input and outputs a probability indicating whether the vector is original or fake. For this simple setting, a feedforward network is the most optimum system. Obviously, changes could be made in the depth of this network but that is not a very significant design change so I decided to leave it out and focus on the mapping and loss functions.
 
-English was used as the source language while Spanish was the target language. Since the vectors for the source language are being aligned with the target, the monolingual target word embedding scores mostly stay constant. The cross-lingual average only includes the single EN\_ES\_SEMEVAL17 dataset and therefore the values for this score are provided at the end in the summary table.
+In \cite{conneau2017word}, the mapping function is a matrix. Therefore after the adversarial training, the paper suggests orthogonalization of the matrix followed by (iterative) Procrustes refinement. Since these add-on steps are only possible with a matrix, I removed them from all of the experiments to enable a justified comparison.
+
+English was used as the source language while Spanish was the target language. Since the vectors for the source language are being aligned with the target, the monolingual target word embedding scores mostly stay constant. The cross-lingual average only includes the single EN\_ES\_SEMEVAL17 dataset and therefore the values for this score are provided at the end in the summary table. All the experiments use the same hyper-parameters. Training included 5 epochs with 1,000,000 iterations in each epoch.
 
 \subsection{Baseline} \label{baseline}
 The network provided by \cite{muserepo} was considered as the baseline system for future experiments. The mapping function is a matrix and the loss function of the discriminator is binary cross-entropy loss.
@@ -116,27 +118,27 @@ The network provided by \cite{muserepo} was considered as the baseline system fo
 \end{table*}
 
 \subsection{Adding a bias}
-The mapping function in \ref{baseline} is modified to include a bias variable while the loss function stays the same.
+The mapping function in \ref{baseline} is modified to include a bias variable while the loss function stays the same. The result was a slight marginal improvement but not significant enough to warrant the removal of orthogonalization and Procrustes alignment.
 
 \subsection{Deep Network}
-The mapping function used is a deep feedforward network with LeakyReLU as the activation function.
+The mapping function used is a deep feedforward network with LeakyReLU as the activation function and consisted of 4 layers. The layers were linear matrix transformations with bias, i.e. $AX + B$. This was the first non-linear function which was tested. Unfortunately, this function was a complete train wreck as shown by the cross-lingual scores in Table \ref{summary-table} which suggests that no alignment is being learnt. The most likely reason for this output is that the adversarial training process was not able to reach convergence.
 
 \subsection{Piece wise non-linear}
 The mapping function used is a piecewise function. The formula for a piecewise function with $n$ breakpoints is:
 
 $Piecewise(x) = (A_1*x + b_1) + relu(A_n*x + b_n) + ... + relu(A_n*x + b_n)$
 
-The functions are tested with one and four breakpoints.
+A breakpoint means the value of the independent variable at which the function is non-differentiable. At all other values, the function is linear and therefore differentiable. The functions are tested with one and four breakpoints. The scores for the one breakpoint function is only marginally worse than the baseline but the scores keep getting worse by introducing more breakpoints, as can be seen from the scores for the four breakpoints function.
 
 \subsection{Wasserstein Loss}
-The mapping function of \ref{baseline} used but the loss function is changed from binary cross-entropy to Wasserstein loss.
+The mapping function of \ref{baseline} used but the loss function is changed from binary cross-entropy to Wasserstein loss function from \cite{arjovsky2017wasserstein}. Although the discriminator is being trained more than the generator, convergence could not be achieved for this case within 5 epochs, as can be seen by the abysmally low cross-lingual score in Table \ref{summary-table}.
 
 \section{Results}
 \subsection{Monolingual source word scores}
-The scores are shown in Table \ref{monolingual-source}
+The scores are shown in Table \ref{monolingual-source}. The scores are the maximum for Baseline+Bias, which is only slightly higher than the Baseline case. All other systems perform poorly.
 
 \subsection{Monolingual target word scores}
-The scores are shown in Table \ref{monolingual-target}
+The scores are shown in Table \ref{monolingual-target}. Except the Baseline+Bias case, the scores for all the other systems remain the same. This is because target word vectors go through minimal changes during the alignment process, which is more focussed on aligning the source vectors with target vectors rather than the other way round.
 
 \subsection{Summary of average scores}
 The scores are shown in Table \ref{summary-table}
@@ -189,6 +191,8 @@ where $a$ and $b$ are random samples and the average is taken over 10,000 such s
   \caption{ Linearity values}
   \label{linearity-table}
 \end{table}
+
+It is interesting to note that although Piecewise-one functions is significantly non-linear as compared to the baseline, it's monolingual source word scores are only slightly worse.
 
 \section{Conclusion}
 
